Css scrollbar and blockcode fix & color-scheme

--- a/src/styles/elements/blockquote.scss
+++ b/src/styles/elements/blockquote.scss
@@ -1,10 +1,14 @@
+pre {
+  overflow-x: auto;
+}
+
 blockquote {
   border-left-style: solid;
   border-left-width: 0.2em;
   padding-left: 1em;
   margin: 0;
   font-weight: 400;
-  
+
   * {
     font-weight: inherit;
     color: inherit;
