--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,6 +17,7 @@
   margin: 0;
 
   * {
+    scrollbar-color: auto;
     margin: 0;
     padding: 0;
   }
